# ros2_humble_notes

./: README.md  README_WEEK_3.md  README_WEEK_4.md  WEEK_3.md  qos_policies.md  ros2_communication_summary.md  week_3.md
src/my_robot_description/: README_WEEK_4.md  package.xml  setup.py
src/my_robot_description/launch/: display.launch.py  gazebo.launch.py  gazebo_yolo.launch.py
src/my_robot_description/my_robot_description/: cone_detect_yolo.py  obstacle_stop.py  opencv_cone_node.py
src/my_robot_description/urdf/: four_wheel_bot.xacro
src/my_robot_description/worlds/: my_world.world
src/week1_pkg/: package.xml  setup.cfg  setup.py
src/week1_pkg/launch/: number_launch.py
src/week1_pkg/week1_pkg/: first_node.py  number_publisher.py  square_subscriber.py
